Switching to monorepo for clunky tools to better understand project structure.